--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 </head>
 <body>
 
-<h2>Karta próby hamulca 🚆</h2>
+<h2>Elektroniczna Karta próby hamulca 🚆</h2>
 
 <!-- Dane ogólne -->
 <div class="panel">
